force-app/main/default/objects/Sentry_Event__c/Sentry_Event__c.object-meta.xml
<CustomObject>
    <description>Canonical observability event store for Platform Events, CDC, Event Monitoring, ELF and telemetry.</description>
    <label>Sentry Event</label>
    <nameField>
        <displayFormat>SEV-{000000}</displayFormat>
        <label>Sentry Event Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sentry Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>