force-app/main/default/objects/Sentry_Event__c/fields/Actor_Id__c.field-meta.xml
<CustomField>
    <fullName>Actor_Id__c</fullName>
    <label>Actor Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>