force-app/main/default/objects/Sentry_Event__c/fields/Anomaly_Factors__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Factors__c</fullName>
    <label>Anomaly Factors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>