force-app/main/default/objects/Sentry_Event__c/fields/Anomaly_Score__c.field-meta.xml
<CustomField>
    <fullName>Anomaly_Score__c</fullName>
    <label>Anomaly Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>