force-app/main/default/objects/Sentry_Event__c/fields/Compliance_Archived__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance Archived</label>
    <type>Checkbox</type>
</CustomField>