force-app/main/default/objects/Sentry_Event__c/fields/Event_Source__c.field-meta.xml
<CustomField>
    <fullName>Event_Source__c</fullName>
    <label>Event Source</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>