force-app/main/default/objects/Sentry_Event__c/fields/Retention_Until__c.field-meta.xml
<CustomField>
    <fullName>Retention_Until__c</fullName>
    <label>Retention Until</label>
    <type>Date</type>
</CustomField>