force-app/main/default/objects/Sentry_Event__c/fields/Risk_Factors__c.field-meta.xml
<CustomField>
    <fullName>Risk_Factors__c</fullName>
    <label>Risk Factors</label>
    <length>255</length>
    <type>TextArea</type>
</CustomField>